--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,59 @@
-.App {
+body{
+  font-family: 'Segoe UI', sans-serif;
+  font-size: 20px;
+}
+.App{
+  margin: auto;
+  padding:10px;
+  width: 50%;
+  height: auto;
+  background-color: #2185C5;
+  position: relative;
+  align-content: center;
+  border-radius: 25px;
+}
+h1{
+  color:#fff;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#todo-form{
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  margin: 0 auto;
+  width: 210px;
+}
+.txtInput{
+  margin:auto;
+  padding:10px;
+  border: none;
+  border-radius: 25px 0 0 25px;
+  width:300px;
+}
+.btn{
+  color:#fff;
+  background-color: #fff;
+  margin: 20px;
+}
+
+.btnAdd{
+  background:#fff;
+  color:black;
+  width: 100px;
+  border:none;
+  border-radius: 0 25px 25px 0;
+  padding:10px;
+}
+.btn-floating{
+  color: black;
+  border:none;
+  border-radius:50px;  
+}
+ul{
+  color:white;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.txtInput:focus{
+ outline:none;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btnAdd:focus{
+  outline:none;
 }
